# gomoku-ai

./: .gitignore  CLAUDE.md  GAME_RESULT_CODES.md  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  start_tournament_worker.py
gomoku/: __init__.py  __main__.py  cli.py
gomoku/agents/: __init__.py  base.py  hf_llm_agent.py  openai_llm_agent.py  simple_agent.py
gomoku/arena/: __init__.py  game_arena.py  tournament.py
gomoku/core/: __init__.py  formatting.py  game_logic.py  interfaces.py  models.py  prompt_formatters.py
gomoku/discovery/: __init__.py  agent_loader.py
gomoku/llm/: __init__.py  huggingface_client.py  interfaces.py  openai_client.py  routed_openai_client.py
gomoku/utils/: __init__.py  __main__.py  json_to_html.py  visualization.py
gomoku/web/: __init__.py  app.py  cli.py  job_manager.py  models.py  monitoring.py  recovery.py  tournament.py  tournament_worker.py  validator.py
gomoku/web/templates/: agent_detail.html  agents.html  base.html  dashboard.html  game_detail.html  leaderboard.html  tournament_detail.html  tournament_new.html  tournaments.html  upload.html
gomoku/web/templates/admin/: system_status.html
